# s2n

./: .envrc  .gitignore  README.ko.md  README.md  cli.py  cli_test_dvwa_adapter.py  host_tester.py  native_host.py  oscommand_result.json  plugin-dev-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_dvwa.sh  s2n_xss_report-dvwa_xss_reflected_low.json  s2n_xss_report.json  setup.py  setup_venv.sh  test.php
.agent/: gui-dev-plan-jh.md  gui-dev-plan-yj.md  gui-implementation.md  jwt-plugin-dev-plan.md  s2n-agent.md  v1.0.0-bugfix.md  v1.0.0-plugin-autobot.md  v1.0.0-plugins-refactor-plan.md  v1.0.0-refactor.md
.agent/workflows/: code-review.md
.claude/: settings.local.json
.envs/dev/: Dockerfile  run_dev_dvwa.sh
.envs/python/: pyproject.toml  requirements-dev.txt  requirements.txt
.envs/scripts/: run_dev_dvwa.sh  setup_venv.sh  stop_dvwa.sh
.github/: pull_request_template.md
docker/: .dockerignore  Dockerfile
docs/: interfaces.en.md  interfaces.ko.md  mitre-attack-plugin-guide.md
extension/: PUBLISH_GUIDE.md  options.html  package-lock.json  package.json  popup.html  tailwind.config.js  tsconfig.app.json  vite.config.ts
native_messaging/: com.s2n.scanner.json  install_host_mac.sh  install_host_win.bat
package/: LICENSE  README.md  hatch_build.py  pyproject.toml  setup.py
s2n.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: conftest.py  mock_data.py  mock_helper.py  pytest.ini  test_csrf_data.py  test_csrf_main.py  test_xss_integration.py  test_xss_unit.py
utils/: url.py
(+178 files in other folders)
