[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2n"
version= "0.2.1"
description = "Plugin-based web vulnerabillity scanner library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name="503+1", email="imapversion4@gmail.com"}
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12",
    "selenium>=4.20",
    "webdriver-manager",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/504s2n/s2n"
Repository = "https://github.com/504s2n/s2n"
Issues = "https://github.com/504s2n/s2n/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.scripts]
s2n = "s2n.s2nscanner.cli.runner:cli"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]